--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,34 @@
+# Android Studio specific
+.idea/
 *.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
+
+# Gradle files
+.gradle/
+build/
+
+# Local configuration
 local.properties
+
+# Android Packaging
+*.apk
+*.ap_
+*.aab
+
+# IntelliJ IDEA-specific
+out/
+
+# Proguard folder generated at build
+proguard/
+
+# Log files
+*.log
+
+# Generated files
+captures/
+output.json
+crashlytics-build.properties
+
+# Misc
+.DS_Store
+*.class
+*.swp
